# taxi-v3-rl

./: README.md  pyproject.toml  requirements.txt
genetic_algorithm/: find_solution.py  solution.npy  use_solution.py
ppo/: train_model.py  use_model.py
q_learning/: q_table.npy
q_tables/: train_model.py  use_model.py
