[tool.poetry]
name = "taxi-v3-rl"
version = "0.1.0"
description = ""
authors = ["Paw565pl <paw565pl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1"
gymnasium = {extras = ["toy-text"], version = "^0.29.1"}
stable-baselines3 = {extras = ["extra"], version = "^2.3.2"}
matplotlib = "^3.9.0"
pygad = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
